--- a/src/components/TagInput/TagInput.css
+++ b/src/components/TagInput/TagInput.css
@@ -2,13 +2,14 @@
   position: relative;
   cursor: pointer;
   border: 2px solid rgb(248, 248, 248);
-  background: #fff;
+  background-color: #fff;
   box-sizing: border-box;
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   -webkit-tap-highlight-color: transparent;
+  transition: all 0.15s;
 }
 .tags-field.dark {
-  background: rgb(43, 43, 43);
+  background-color: rgb(43, 43, 43);
   border-color: rgb(51, 51, 51);
 }
 .tags-field:focus-within {
